@@ -1,3 +1,8 @@
+2004-08-12  Jani Monoses <jani@iv.ro>
+
+	* cdl/hal_arm_edb7xxx.cdl:
+	* src/hal_diag.c: Support baudrate change via virtual vectors.
+
 2004-04-22  Jani Monoses <jani@iv.ro>
 
 	 * cdl/hal_arm_edb7xxx.cdl :
